# DumpHelldiversGeneratedData

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: glaze.cmake
notes/: WeaponList.txt  WeaponList405.txt  generated_damage_settings.rcnet
notes/History/: 1.000.304.json  1.000.404.json  1.001.002.json  1.001.100.json  CrossReference.py  CrossReferenceName.py  WeaponList1003.txt  WeaponList305.txt
src/: PatternScanner.hpp  main.cpp
